2010-12-03 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-05-01
	* Fix detection of CVS version string.

2010-12-03 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-05-00
	* Rework SM hyperdaq page: add time stamp and hostname to banner, use
	  absolute time in throughput monitoring page, bring consumer statistics
	  page in line with other pages.
	* Replace a couple of size()==0 calls with empty().

2010-12-01 William Tanenbaum <wmtan@fnal.gov>

	* tag V06-04-09
	* Fix for -Wtype-limits compiler warning due to unsigned__0 comparisons,
	  which always evaluate to true. Fix also streamlines the relevant code
	  by using std::string.find() and std::string::rfind() rather than
	  unnecessary and error prone loops in TriggerSelector.

2010-12-01 Giulio Eulisse <Giulio.Eulisse@cern.ch>

	* tag V06-04-08
	* Remove unneeded edm::RootAutoLibraryLoader::enable() call from constructor.
	* Modifications to fix compilation issues on Mac OS X.

2010-11-22 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-04-07
	* Increase queue expiration interval to avoid spurious unit-test failures.

2010-11-05 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-04-06
	* Fix calculation of maxFileSize in bytes when going beyond 2 GB.

2010-11-04 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-04-05
	* Use unsigned long long consistently when checking file sizes in bytes.
	  Fixes the file size check when file sizes exceed 2 GB.

2010-11-03 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-04-04
	* Make processCount unit tests more reliable
	* Disable time-sensitive unit test ConcurrentQueue_t for automatic unit tests.

2010-10-19 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-04-03
	* Minor fixes for c++0x.

2010-10-15 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-04-02
	* Make unit-tests more reliable and fix path issues when
	  running them with 'scram b runtests'.

2010-10-11 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-04-01
	* Add LastLumi to EoR record.