@@ -1,4 +1,4 @@
-// $Id: ConcurrentQueue.h,v 1.8 2010/02/18 14:45:19 mommsen Exp $
+// $Id: ConcurrentQueue.h,v 1.9 2010/12/01 13:44:48 eulisse Exp $
 /// @file: ConcurrentQueue.h 
 
 
@@ -12,6 +12,7 @@
 
 #include <iostream> // debugging
 
+#include "boost/date_time/posix_time/posix_time_types.hpp"
 #include "boost/utility/enable_if.hpp"
 #include "boost/thread/condition.hpp"
 #include "boost/thread/mutex.hpp"
@@ -40,9 +41,9 @@ namespace stor
         RejectNewest: the function returns void; the new item is
         not put onto the FIFO.
    
-     $Author: mommsen $
-     $Revision: 1.8 $
-     $Date: 2010/02/18 14:45:19 $
+     $Author: eulisse $
+     $Revision: 1.9 $
+     $Date: 2010/12/01 13:44:48 $
    */
 
 
@@ -263,13 +264,13 @@ namespace stor
 
     /**
        Add a copy of item to the queue. If the queue is full wait
-       until it becomes non-full or until wait_sec seconds have
-       passed. Return true if the items has been put onto the queue or
+       until it becomes non-full or until time_duration has passed.
+       Return true if the items has been put onto the queue or
        false if the timeout has expired. This may throw any exception
        thrown by the assignment operator of type value_type, or
        bad_alloc.
      */
-    bool enq_timed_wait(value_type const& p, unsigned long wait_sec);
+    bool enq_timed_wait(value_type const& p, boost::posix_time::time_duration const&);
 
     /**
        Assign the value at the head of the queue to item and then
@@ -291,12 +292,12 @@ namespace stor
     /**
        Assign the value at the head of the queue to item and then
        remove the head of the queue. If the queue is empty wait until
-       is has become non-empty or until wait_sec seconds have
-       passed. Return true if an item has been removed from the queue
+       is has become non-empty or until time_duration has passed.
+       Return true if an item has been removed from the queue
        or false if the timeout has expired. This may throw any
        exception thrown by the assignment operator of type value_type.
      */
-    bool deq_timed_wait(value_type& p, unsigned long wait_sec);
+    bool deq_timed_wait(value_type& p, boost::posix_time::time_duration const&);
 
     /**
        Return true if the queue is empty, and false if it is not.
@@ -469,21 +470,12 @@ namespace stor
   template <class T, class EnqPolicy>
   bool
   ConcurrentQueue<T,EnqPolicy>::enq_timed_wait(value_type const& item, 
-                                               unsigned long wait_sec)
+                                               boost::posix_time::time_duration const& wait_time)
   {
     lock_t lock(_protect_elements);
     if ( _is_full() )
       {
-// CLOCK_MONOTONIC does not exists on macosx.
-#ifdef __APPLE__
-        return false;
-#else
-        boost::xtime now;
-        if (boost::xtime_get(&now, CLOCK_MONOTONIC) != CLOCK_MONOTONIC) 
-          return false; // failed to get the time.
-        now.sec += wait_sec;
-        _queue_not_full.timed_wait(lock, now);
-#endif
+        _queue_not_full.timed_wait(lock, wait_time);
       }
     return _insert_if_possible(item);
   }
@@ -508,20 +500,12 @@ namespace stor
   template <class T, class EnqPolicy>
   bool
   ConcurrentQueue<T,EnqPolicy>::deq_timed_wait(value_type& item,
-                                               unsigned long wait_sec)
+                                               boost::posix_time::time_duration const& wait_time)
   {
     lock_t lock(_protect_elements);
     if (_size == 0)
       {
-#ifdef __APPLE__
-        return false;
-#else
-        boost::xtime now;
-        if (boost::xtime_get(&now, CLOCK_MONOTONIC) != CLOCK_MONOTONIC)
-          return false; // failed to get the time.
-        now.sec += wait_sec;
-        _queue_not_empty.timed_wait(lock, now);
-#endif
+        _queue_not_empty.timed_wait(lock, wait_time);
       }
     return _remove_head_if_possible(item);
   }
